# yushin-dfir

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVPOST_SUBMISSION.md  LICENSE  README.md  SECURITY.md  agentic-dart-architecture.drawio  pytest.ini  yushin-architecture.drawio
.github/workflows/: ci.yml
agentic_dart_agent/: README.md  pyproject.toml
agentic_dart_agent/src/agentic_dart_agent/: __init__.py  live.py
agentic_dart_audit/: README.md  pyproject.toml
agentic_dart_corr/: README.md
agentic_dart_mcp/: README.md  pyproject.toml
agentic_dart_mcp/src/agentic_dart_mcp/: __init__.py  server.py  server_stdio.py
agentic_dart_playbook/: README.md  senior-analyst-v1.yaml
dart_agent/: README.md  pyproject.toml
dart_agent/src/dart_agent/: __init__.py  live.py
dart_audit/: pyproject.toml
dart_audit/src/dart_audit/: cli.py  (+1 more)
dart_corr/: README.md  correlation-rules.yaml  pyproject.toml
dart_corr/src/dart_corr/: __init__.py
dart_corr/tests/: test_dart_corr.py
dart_mcp/: README.md  pyproject.toml
dart_mcp/src/dart_mcp/: __init__.py  _v04_expansion.py  _v05_supply_chain.py  _v06_macos_linux.py  server.py  server_stdio.py
dart_mcp/src/dart_mcp/sift_adapters/: __init__.py  _common.py  amcacheparser.py  evtxecmd.py  mftecmd.py  pecmd.py  plaso.py  recmd.py  volatility3.py  yara.py
dart_playbook/: README.md  senior-analyst-v3.yaml
docs/: DEMO_STORYBOARD.md  DEMO_STORYBOARD_v2.md  DEVPOST_SUBMISSION.md  ROADMAP.md  accuracy-report.md  architecture.md  case-pth-timestomp.md  comparison.md  dataset.md  external-skill-references.md  live-mode.md  running-on-macos.md  troubleshooting.md
docs/benchmarks/: SUMMARY.md
docs/demo_assets/: README.md
docs/voiceover/: README.md  say_voiceover.sh
examples/: demo-run.sh  sift-adapter-demo.sh
scripts/: generate_realistic_evidence.py  install.sh  measure_accuracy.py  measure_cfreds.py  regenerate_hero.py
scripts/benchmark/: README.md  datasets.py  download.py  run_all.py  run_benchmark.py
tests/: repro_issue_43.py  test_agent_self_correction.py  test_audit_chain.py  test_concurrency_and_edge_cases.py  test_extended_mcp.py  test_live_mcp.py  test_mcp_bypass.py  test_mcp_surface.py  test_parse_linux_dfir.py  test_parse_registry_hive.py  test_qa_pass_regressions.py  test_sift_adapters.py  test_sigma_matcher.py  test_v05_supply_chain.py  test_v06_macos_linux.py
tests/_pending/: README.md  test_extended_mcp.py  test_sigma_matcher.py
yushin-agent/: README.md
yushin-audit/: README.md
yushin-corr/: README.md
yushin-playbook/: README.md  senior-analyst-v1.yaml
yushin_audit/: README.md
yushin_corr/: README.md
yushin_mcp/: README.md
yushin_playbook/: README.md  senior-analyst-v1.yaml
(+127 files in other folders)
