[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-dart-agent"
version = "0.2.0"
description = "Agentic-DART autonomous DFIR agent (deterministic + live modes)"
requires-python = ">=3.10"
dependencies = [
    "agentic-dart-audit",
    "agentic-dart-mcp",
]

[project.optional-dependencies]
live = [
    "anthropic>=0.40.0",
    "mcp>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
