[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-dart-mcp"
version = "0.2.0"
description = "Agentic-DART typed, read-only forensic MCP server (15 functions)"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.0.0",
]

[project.optional-dependencies]
stdio = [
    "mcp>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
