[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dart-mcp"
version = "0.5.0"
description = "Agentic-DART typed, read-only forensic MCP server (60 tools: 35 native + 25 SIFT Workstation adapters)"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.0.0",
]

[project.optional-dependencies]
stdio = [
    "mcp>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["dart_mcp*"]    # ensure sift_adapters subpackage is picked up
